--- a/src/data/variables.scss
+++ b/src/data/variables.scss
@@ -124,9 +124,6 @@ $averageSpeed: url('data:image/svg+xml,<svg width="100%" height="100%" viewBox="
 $odometer: url('data:image/svg+xml,<svg width="100%" height="100%" viewBox="0 0 6 6" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"><path fill="#{$lightblue}" d="M2.88,0.24c1.457,0 2.64,1.183 2.64,2.64c0,1.457 -1.183,2.64 -2.64,2.64c-1.457,0 -2.64,-1.183 -2.64,-2.64c0,-1.457 1.183,-2.64 2.64,-2.64Zm0,0.5c-1.181,0 -2.14,0.959 -2.14,2.14c0,1.181 0.959,2.14 2.14,2.14c1.181,0 2.14,-0.959 2.14,-2.14c0,-1.181 -0.959,-2.14 -2.14,-2.14Zm0.063,1.357c-0.097,-0.098 -0.097,-0.256 0,-0.354c0.098,-0.097 0.256,-0.097 0.354,0l0.96,0.96c0.097,0.098 0.097,0.256 0,0.354l-0.96,0.96c-0.098,0.097 -0.256,0.097 -0.354,0c-0.097,-0.098 -0.097,-0.256 0,-0.354l0.783,-0.783l-0.783,-0.783Zm-1.2,0c-0.097,-0.098 -0.097,-0.256 0,-0.354c0.098,-0.097 0.256,-0.097 0.354,0l0.96,0.96c0.097,0.098 0.097,0.256 0,0.354l-0.96,0.96c-0.098,0.097 -0.256,0.097 -0.354,0c-0.097,-0.098 -0.097,-0.256 0,-0.354l0.783,-0.783l-0.783,-0.783Z"/></svg>')
   no-repeat;
 
-// user panel pin img
-$pin: transparent url("https://i.imgur.com/XolL9Tj.png") no-repeat 1px 1px;
-
 // warning qualification
 $qualificationMark: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="24px" height="24px" version="1.1" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd" viewBox="0 0 24 24"><g id="qualification"><!-- background circle --><path id="background" d="M12 1c6.08,0 11,4.92 11,11 0,6.08 -4.92,11 -11,11 -6.08,0 -11,-4.92 -11,-11 0,-6.08 4.92,-11 11,-11z" fill="%23695C0E" stroke="%23CCAA00" stroke-width="1.2" stroke-miterlimit="2"/><!-- award inner circle --><path id="award-circle" d="M16.35 9.51c0,-2.42 -1.96,-4.37 -4.38,-4.37 -2.42,0 -4.37,1.95 -4.37,4.37 0,2.42 1.95,4.38 4.37,4.38 2.42,0 4.38,-1.96 4.38,-4.38z" fill="none" stroke="%23FFD401" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="2"/><!-- award ribbon --><polyline id="award-line" points="9.6,13.19 8.85,18.88 11.97,17.01 15.1,18.88 14.34,13.18" fill="none" stroke="%23FFD401" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="2"/></g></svg>')
   bottom right no-repeat;
@@ -152,18 +149,6 @@ $createNormal: url('data:image/svg+xml,<svg width="100%" height="100%" viewBox="
 $saveNormal: url('data:image/svg+xml,<svg width="100%" height="100%" viewBox="0 0 235 50" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"><path d="M34.82,35.287l-12.411,-21.459l6.615,1.173l0,-1.637l13.384,0l0,1.637l6.592,-1.173l-13.295,23.007l-0.885,-1.548Zm39.863,-1.151c-1.239,0 -2.323,-0.265 -3.252,-0.818c-0.929,-0.553 -1.659,-1.328 -2.168,-2.323c-0.508,-0.995 -0.752,-2.168 -0.752,-3.473l0,-4.867c0,-1.327 0.244,-2.478 0.752,-3.495c0.509,-0.996 1.239,-1.77 2.168,-2.323c0.929,-0.553 2.013,-0.818 3.252,-0.818c1.018,0 1.947,0.221 2.81,0.663c0.84,0.421 1.57,1.04 2.146,1.836c0.553,0.797 0.951,1.726 1.15,2.766l-2.544,0c-0.155,-0.554 -0.42,-1.04 -0.774,-1.483c-0.376,-0.42 -0.797,-0.752 -1.283,-0.995c-0.487,-0.243 -0.996,-0.354 -1.505,-0.354c-0.73,0 -1.371,0.177 -1.902,0.509c-0.553,0.354 -0.974,0.862 -1.283,1.482c-0.288,0.641 -0.443,1.371 -0.443,2.212l0,4.867c0,0.818 0.155,1.548 0.443,2.19c0.309,0.641 0.73,1.128 1.283,1.482c0.531,0.332 1.172,0.509 1.902,0.509c0.531,0 1.018,-0.111 1.505,-0.332c0.486,-0.221 0.907,-0.531 1.283,-0.973c0.354,-0.421 0.619,-0.952 0.774,-1.549l2.544,0c-0.199,1.062 -0.597,1.991 -1.173,2.788c-0.575,0.796 -1.283,1.415 -2.145,1.836c-0.863,0.442 -1.792,0.663 -2.788,0.663Zm15.53,0c-1.239,0 -2.345,-0.265 -3.274,-0.818c-0.952,-0.531 -1.682,-1.305 -2.19,-2.301c-0.531,-0.973 -0.775,-2.124 -0.775,-3.429l-0,-5.021c-0,-1.306 0.244,-2.456 0.775,-3.451c0.508,-0.974 1.238,-1.748 2.19,-2.279c0.929,-0.553 2.035,-0.818 3.274,-0.818c1.216,0 2.323,0.265 3.274,0.818c0.929,0.531 1.659,1.305 2.19,2.279c0.509,0.995 0.774,2.145 0.774,3.451l-0,5.021c-0,1.305 -0.265,2.456 -0.774,3.429c-0.531,0.996 -1.261,1.77 -2.19,2.301c-0.951,0.553 -2.058,0.818 -3.274,0.818Zm-0,-2.455c0.73,0 1.371,-0.177 1.924,-0.487c0.553,-0.332 0.996,-0.796 1.283,-1.416c0.31,-0.597 0.465,-1.305 0.465,-2.101l-0,-5.199c-0,-0.796 -0.155,-1.504 -0.465,-2.101c-0.287,-0.62 -0.73,-1.084 -1.283,-1.416c-0.553,-0.332 -1.194,-0.487 -1.924,-0.487c-0.73,0 -1.394,0.155 -1.947,0.487c-0.553,0.332 -0.995,0.796 -1.283,1.416c-0.31,0.597 -0.465,1.305 -0.465,2.101l-0,5.199c-0,0.796 0.155,1.504 0.465,2.101c0.288,0.62 0.73,1.084 1.283,1.416c0.553,0.31 1.217,0.487 1.947,0.487Zm15.126,-4.605l-4.021,6.883l-2.81,0l5.533,-9.069l-5.378,-8.694l2.788,0l3.878,6.537l3.82,-6.537l2.787,0l-5.3,8.7l5.588,9.063l-2.81,0l-4.075,-6.883Zm11.796,-0.019l0,6.902l-2.478,0l0,-17.763l6.88,0c1.04,0 1.969,0.221 2.788,0.685c0.796,0.443 1.437,1.084 1.858,1.903c0.464,0.84 0.686,1.77 0.686,2.853c0,1.084 -0.222,2.036 -0.686,2.854c-0.421,0.819 -1.062,1.46 -1.858,1.903c-0.819,0.442 -1.748,0.663 -2.788,0.663l-4.402,0Zm0,-8.494l0,6.127l4.469,0c0.553,0 1.017,-0.11 1.415,-0.376c0.421,-0.243 0.73,-0.597 0.952,-1.062c0.221,-0.464 0.331,-0.995 0.331,-1.615c0,-0.597 -0.11,-1.15 -0.331,-1.592c-0.222,-0.465 -0.531,-0.841 -0.952,-1.084c-0.398,-0.266 -0.862,-0.398 -1.415,-0.398l-4.469,0Zm14.297,11.503l-1.334,3.893l-2.676,0l6.526,-17.763l2.123,0l6.548,17.763l-2.676,0l-1.34,-3.893l-7.171,0Zm6.356,-2.367l-2.779,-8.075l-2.766,8.075l5.545,0Zm10.008,-1.305l0,7.565l-2.5,0l0,-17.763l2.5,0l0,7.831l7.588,0l0,-7.831l2.499,0l0,17.763l-2.499,0l0,-7.565l-7.588,0Zm25.13,-5.643l-8.605,13.186l-2.058,0l0,-17.741l2.478,0l0,13.401l8.628,-13.401l2.013,0l0,17.741l-2.456,0l0,-13.186Zm9.424,-2.188l-5.022,0l-0,-2.367l12.544,0l-0,2.367l-5.022,0l-0,15.396l-2.5,0l-0,-15.396Zm16.282,15.396l-6.814,0l-0,-17.763l2.478,0l-0,7.145l4.336,0c1.128,0 2.079,0.199 2.876,0.619c0.796,0.398 1.415,1.018 1.836,1.814c0.398,0.797 0.619,1.748 0.619,2.876c-0,1.128 -0.221,2.08 -0.619,2.876c-0.421,0.774 -1.04,1.394 -1.836,1.814c-0.797,0.398 -1.748,0.619 -2.876,0.619Zm-4.336,-8.251l-0,5.884l4.424,0c0.553,0 1.04,-0.132 1.46,-0.354c0.398,-0.221 0.708,-0.553 0.907,-0.995c0.221,-0.443 0.332,-0.973 0.332,-1.593c-0,-0.619 -0.111,-1.15 -0.332,-1.593c-0.199,-0.442 -0.509,-0.774 -0.907,-1.017c-0.42,-0.221 -0.907,-0.332 -1.46,-0.332l-4.424,0Z" fill="#{$black}"/></svg>')
   no-repeat;
 
-// select mine race
-$selectMine: url("https://i.imgur.com/1SwCLQd.png") no-repeat;
-
-// select created race
-$selectCreated: url("https://i.imgur.com/sMJOtwd.png") no-repeat;
-
-// select fast start race
-$fastStart: url("https://i.imgur.com/8rF11ao.png") no-repeat;
-
-// pin svg icon
-$pin: "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 24 24' fill='none' stroke='#{$white}' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-anchor'%3E%3Ccircle cx='12' cy='5' r='3'%3E%3C/circle%3E%3Cline x1='12' y1='22' x2='12' y2='8'%3E%3C/line%3E%3Cpath d='M5 12H2a10 10 0 0 0 20 0h-3'%3E%3C/path%3E%3C/svg%3E";
-
 // Icons used for login button and form
 $key-icon: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 24 24' fill='none' stroke='#{$white}' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-key'%3E%3Cpath d='M21 2l-2 2m-7.61 7.61a5.5 5.5 0 1 1-7.778 7.778 5.5 5.5 0 0 1 7.777-7.777zm0 0L15.5 7.5m0 0l3 3L22 7l-3-3m-3.5 3.5L19 4'%3E%3C/path%3E%3C/svg%3E");
 
@@ -178,20 +163,6 @@ $move-icon: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" widt
 $user-plus-icon: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 24 24' fill='none' stroke='#{$white}' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-user-plus'%3E%3Cpath d='M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2'%3E%3C/path%3E%3Ccircle cx='8.5' cy='7' r='4'%3E%3C/circle%3E%3Cline x1='20' y1='8' x2='20' y2='14'%3E%3C/line%3E%3Cline x1='23' y1='11' x2='17' y2='11'%3E%3C/line%3E%3C/svg%3E");
 
 $user-check-icon: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 24 24' fill='none' stroke='#{$white}' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-user-check'%3E%3Cpath d='M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2'%3E%3C/path%3E%3Ccircle cx='8.5' cy='7' r='4'%3E%3C/circle%3E%3Cpolyline points='17 11 19 13 23 9'%3E%3C/polyline%3E%3C/svg%3E");
-
-// Klavotools Recent Games
-$button-bg-color: rgba(200, 200, 200, 0.3);
-$button-bg-hover: rgba(200, 200, 200, 0.5);
-$button-border-color: rgba(200, 200, 200, 0.3);
-$count-border-color: rgba(200, 200, 200, 0.5);
-$text-color: $gray;
-$font-family: "Consolas", sans-serif;
-$pin-color: $green;
-$delete-color: $red;
-$handle-opacity: 0.4;
-$handle-opacity-hover: 1;
-$button-filter-dim: brightness(0.7);
-$button-filter-bright: brightness(1);
 
 // SVG Icons as variables
 $chevron-left-icon: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 24 24' fill='none' stroke='#{$white}' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-chevron-left'%3E%3Cpolyline points='15 18 9 12 15 6'%3E%3C/polyline%3E%3C/svg%3E");
@@ -234,12 +205,9 @@ $preview-icon: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" w
 // Forum list
 $enterForumBranch: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#{$lightblue}" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"></path><polyline points="10 17 15 12 10 7"></polyline><line x1="15" y1="12" x2="3" y2="12"></line></svg>');
 
-$forumEdit: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 24 24' fill='#{$lightblue}' stroke='transparent' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M17 3a2.828 2.828 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5L17 3z'%3E%3C/path%3E%3C/svg%3E")
-  no-repeat;
+$forumEdit: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 24 24' fill='none' stroke='#{$black}' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-edit'%3E%3Cpath d='M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7'%3E%3C/path%3E%3Cpath d='M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z'%3E%3C/path%3E%3C/svg%3E");
 
-$edit-icon: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 24 24' fill='none' stroke='#{$white}' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-edit'%3E%3Cpath d='M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7'%3E%3C/path%3E%3Cpath d='M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z'%3E%3C/path%3E%3C/svg%3E");
-
-$reply-icon: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 24 24' fill='none' stroke='#{$white}' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-corner-down-left'%3E%3Cpolyline points='9 10 4 15 9 20'%3E%3C/polyline%3E%3Cpath d='M20 4v7a4 4 0 0 1-4 4H4'%3E%3C/path%3E%3C/svg%3E");
+$forumReply: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 24 24' fill='none' stroke='#{$black}' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-corner-down-left'%3E%3Cpolyline points='9 10 4 15 9 20'%3E%3C/polyline%3E%3Cpath d='M20 4v7a4 4 0 0 1-4 4H4'%3E%3C/path%3E%3C/svg%3E");
 
 $chevron-right-icon: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#{$white}" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevrons-right"><polyline points="13 17 18 12 13 7"></polyline><polyline points="6 17 11 12 6 7"></polyline></svg>');
 
