--- a/src/forum/_postsList.scss
+++ b/src/forum/_postsList.scss
@@ -179,6 +179,13 @@
         }
 
         .post {
+          .avatar_big {
+            .rang {
+              font-size: 9px !important;
+              text-transform: uppercase !important;
+            }
+          }
+
           .post-container {
             .text {
               img.linked-image {
