--- a/src/formatButtons.scss
+++ b/src/formatButtons.scss
@@ -3,7 +3,8 @@
 // Default container
 #fast-reply-controls,
 // Klavotools BB_Tools_Buttons
-#bb_tools_fast-reply {
+#bb_tools_fast-reply,
+#bb_tools_text {
   tr {
     display: inline-flex !important;
     flex-wrap: wrap !important;
