--- a/src/mixins.scss
+++ b/src/mixins.scss
@@ -116,12 +116,23 @@
     font-family: "Montserrat", Verdana, Geneva, Tahoma, sans-serif !important;
     font-weight: 700 !important;
     text-transform: uppercase !important;
+    font-size: 14px !important;
+    
+    @media (max-width: 500px) {
+      height: 32px !important;
+      font-size: 11px !important;
+    }
   }
 
   input[name="send"] {
     border-radius: 5px 0 0 5px !important;
     border-right: 1px solid $black !important;
     background: $gray $send-icon no-repeat 15px center / 24px !important;
+    
+    @media (max-width: 500px) {
+      background-size: 18px !important;
+      background-position: 10px center !important;
+    }
 
     &:hover {
       background-color: $blue !important;
@@ -131,6 +142,11 @@
   input[name="preview"] {
     border-radius: 0 5px 5px 0 !important;
     background: $gray $preview-icon no-repeat 15px center / 24px !important;
+    
+    @media (max-width: 500px) {
+      background-size: 18px !important;
+      background-position: 10px center !important;
+    }
 
     &:hover {
       background-color: $blue !important;
