gamelist adaptive as separate file

--- a/src/main.scss
+++ b/src/main.scss
@@ -56,7 +56,7 @@
 @import "./vocabularies/vocabularies";
 @import "./vocabularies/vocabulary";
 @import "./vocabularies/vocabulary-comments";
-@import "gamelist";
+@import "./gamelist/gamelist";
 @import "gametypes";
 @import "createGame";
 @import "race";
