--- a/src/gamelist/gamelist.scss
+++ b/src/gamelist/gamelist.scss
@@ -73,6 +73,7 @@
       td.status,
       td.players {
         padding: 0 10px 0 0 !important;
+        height: 100% !important;
       }
 
       td.enter {
