padding: 5px for .item when adaptive

--- a/src/gamelist/gamelist-adaptive.scss
+++ b/src/gamelist/gamelist-adaptive.scss
@@ -24,7 +24,7 @@
   #gamelist {
     .item {
       @media (max-width: 800px) {
-        padding: 10px 0 !important;
+        padding: 5px !important;
         
         table {
           @include flex-layout(column, flex-start, stretch);
